[gd_scene load_steps=10 format=2]

[ext_resource path="res://yxvtrkc3crfz.jpg" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/Opponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level/Level.gd" type="Script" id=5]
[ext_resource path="res://Level/Countdown.gd" type="Script" id=6]
[ext_resource path="res://[Effect]Panch1_panop.ogg" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 510.3, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.5556, 305.473 )

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 74.2302, 114.934 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top Wall" type="StaticBody2D" parent="."]
position = Vector2( 508, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top Wall"]
shape = SubResource( 1 )

[node name="Bottom Wall" type="StaticBody2D" parent="."]
position = Vector2( 512, 602 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom Wall"]
shape = SubResource( 1 )

[node name="Opponent" parent="." instance=ExtResource( 3 )]
position = Vector2( 946.1, 247.914 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 45.4219, 245.984 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 524, 280 )

[node name="Player Goal" type="Area2D" parent="."]
position = Vector2( -41.2082, 305.873 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Goal"]
shape = SubResource( 2 )

[node name="Opponent Goal" type="Area2D" parent="."]
position = Vector2( 1055.69, 296.348 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Opponent Goal"]
shape = SubResource( 2 )

[node name="Score" type="Label" parent="."]
margin_left = 400.0
margin_top = 400.0
margin_right = 600.0
margin_bottom = 450.0
text = "This should be the score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
script = ExtResource( 6 )

[node name="Hitsfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="body_entered" from="Player Goal" to="." method="_on_Player_Goal_body_entered"]
[connection signal="body_entered" from="Opponent Goal" to="." method="_on_Opponent_Goal_body_entered"]
[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]
